force-app/main/default/objects/Contracts__c/Contracts__c.object-meta.xml
<CustomObject>
    <label>HQ Contracts</label>
    <nameField>
        <displayFormat>CON-{YYMM}-{000000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HQ Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>