force-app/main/default/objects/Contracts__c/fields/Bank_Information__c.field-meta.xml
<CustomField>
    <fullName>Bank_Information__c</fullName>
    <label>Bank Information</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>