force-app/main/default/objects/Contracts__c/fields/BPM_Contrct_Numbder__c.field-meta.xml
<CustomField>
    <fullName>BPM_Contrct_Numbder__c</fullName>
    <externalId>true</externalId>
    <label>BPM Contrct Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>