force-app/main/default/objects/Contracts__c/fields/BPM_Final_Customer_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>BPM_Final_Customer_Payment_Terms__c</fullName>
    <label>BPM Final Customer Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Term</valueSetName>
    </valueSet>
</CustomField>