force-app/main/default/objects/Contracts__c/fields/BPM_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>BPM_Sales_Org__c</fullName>
    <label>BPM Sales Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Org</valueSetName>
    </valueSet>
</CustomField>