force-app/main/default/objects/Contracts__c/fields/Business_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Manager__c</fullName>
    <label>Business Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>