force-app/main/default/objects/Contracts__c/fields/Buyer_Adverse_Booking_Exemption_Clause__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Adverse_Booking_Exemption_Clause__c</fullName>
    <label>Buyer Adverse Booking Exemption Clause</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>