force-app/main/default/objects/Contracts__c/fields/Conditions_Number__c.field-meta.xml
<CustomField>
    <fullName>Conditions_Number__c</fullName>
    <label>Conditions Number</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>