force-app/main/default/objects/Contracts__c/fields/Contract_Item__c.field-meta.xml
<CustomField>
    <fullName>Contract_Item__c</fullName>
    <label>Contract Item</label>
    <summaryForeignKey>Contracts_Detail__c.Contracts__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>