force-app/main/default/objects/Contracts__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>出口</fullName>
                <default>true</default>
                <label>Export</label>
            </value>
            <value>
                <fullName>内销</fullName>
                <label>Domestic sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>