force-app/main/default/objects/Contracts__c/fields/Contract_Version_Change_Clause__c.field-meta.xml
<CustomField>
    <fullName>Contract_Version_Change_Clause__c</fullName>
    <label>Contract Version Change Clause</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>