force-app/main/default/objects/Contracts__c/fields/Countersign_Time__c.field-meta.xml
<CustomField>
    <fullName>Countersign_Time__c</fullName>
    <label>Countersign Time</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>