force-app/main/default/objects/Contracts__c/fields/CreatedDate_Text__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_Text__c</fullName>
    <formula>TEXT(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedDate Text</label>
    <type>Text</type>
</CustomField>