force-app/main/default/objects/Contracts__c/fields/Credit_Support_Clause__c.field-meta.xml
<CustomField>
    <fullName>Credit_Support_Clause__c</fullName>
    <label>Credit Support Clause</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>