force-app/main/default/objects/Contracts__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HQ Contracts (Customer)</relationshipLabel>
    <relationshipName>HQ_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>