force-app/main/default/objects/Contracts__c/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <label>Customer&apos; PO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>