force-app/main/default/objects/Contracts__c/fields/Customer_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Shipping Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Customer_Shipping_Address__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Final_Customer__c</valueField>
        </filterItems>
        <filterItems>
            <field>Customer_Shipping_Address__c.Status__c</field>
            <operation>equals</operation>
            <value>Enable</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Customer_Shipping_Address__c</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>