force-app/main/default/objects/Contracts__c/fields/Destination_Port__c.field-meta.xml
<CustomField>
    <fullName>Destination_Port__c</fullName>
    <label>Destination Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>