force-app/main/default/objects/Contracts__c/fields/Destination_Port_New__c.field-meta.xml
<CustomField>
    <fullName>Destination_Port_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Port</label>
    <referenceTo>Port_Information__c</referenceTo>
    <relationshipLabel>HQ Contracts (Destination Port)</relationshipLabel>
    <relationshipName>HQ_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>