force-app/main/default/objects/Contracts__c/fields/End_Customer_Detail__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Detail__c</fullName>
    <label>Final Customer Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>