force-app/main/default/objects/Contracts__c/fields/Export_Country__c.field-meta.xml
<CustomField>
    <fullName>Export_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Export Country</label>
    <referenceTo>Country_Province_Master_Data__c</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>