force-app/main/default/objects/Contracts__c/fields/Final_Customer__c.field-meta.xml
<CustomField>
    <fullName>Final_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Contracts_Final_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>