force-app/main/default/objects/Contracts__c/fields/General_Manager__c.field-meta.xml
<CustomField>
    <fullName>General_Manager__c</fullName>
    <label>General Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>