force-app/main/default/objects/Contracts__c/fields/Import_Permits__c.field-meta.xml
<CustomField>
    <fullName>Import_Permits__c</fullName>
    <label>Import Permits</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>