force-app/main/default/objects/Contracts__c/fields/Inco_Location1__c.field-meta.xml
<CustomField>
    <fullName>Inco_Location1__c</fullName>
    <label>Inco. Location1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>