force-app/main/default/objects/Contracts__c/fields/Interest_Clause__c.field-meta.xml
<CustomField>
    <fullName>Interest_Clause__c</fullName>
    <label>Interest Clause</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>