force-app/main/default/objects/Contracts__c/fields/Loading_Port__c.field-meta.xml
<CustomField>
    <fullName>Loading_Port__c</fullName>
    <label>Loading Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>