force-app/main/default/objects/Contracts__c/fields/Loading_Port_New__c.field-meta.xml
<CustomField>
    <fullName>Loading_Port_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loading Port</label>
    <referenceTo>Port_Information__c</referenceTo>
    <relationshipLabel>HQ Contracts</relationshipLabel>
    <relationshipName>HQ_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>