force-app/main/default/objects/Contracts__c/fields/NoSameDay__c.field-meta.xml
<CustomField>
    <fullName>NoSameDay__c</fullName>
    <inlineHelpText>Reason for not applying on the same day</inlineHelpText>
    <label>Reason for not apply on the same day</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>