force-app/main/default/objects/Contracts__c/fields/Other_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Other_Remarks__c</fullName>
    <inlineHelpText>Want to print &quot;re-negotiated condition&quot; and &quot;freight condition&quot;</inlineHelpText>
    <label>Other Remarks</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>