force-app/main/default/objects/Contracts__c/fields/Other_Supplementary_Terms__c.field-meta.xml
<CustomField>
    <fullName>Other_Supplementary_Terms__c</fullName>
    <label>Other Supplementary Terms</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>