force-app/main/default/objects/Contracts__c/fields/Payment_Term_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Cost_Rate__c</fullName>
    <label>Payment Term Cost Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>