force-app/main/default/objects/Contracts__c/fields/Price_Retranslation_Agreement_Clause__c.field-meta.xml
<CustomField>
    <fullName>Price_Retranslation_Agreement_Clause__c</fullName>
    <label>Price Retranslation Agreement Clause</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>