force-app/main/default/objects/Contracts__c/fields/Product_Code_Blank_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Blank_Count__c</fullName>
    <label>Product Code Blank Count</label>
    <summaryFilterItems>
        <field>Contracts_Detail__c.Product_Code_Vertify__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Contracts_Detail__c.Contracts__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>