force-app/main/default/objects/Contracts__c/fields/Reason_of_Negative_Margin__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Negative_Margin__c</fullName>
    <label>Reason of Negative Margin</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>