force-app/main/default/objects/Contracts__c/fields/Recall_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recall_Reason__c</fullName>
    <label>Recall Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>