force-app/main/default/objects/Contracts__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>