force-app/main/default/objects/Contracts__c/fields/Restriction_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Restriction_Reasons__c</fullName>
    <label>Restriction Reasons</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>