force-app/main/default/objects/Contracts__c/fields/Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Restrictions__c</fullName>
    <label>Restrictions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>否</fullName>
                <label>N</label>
            </value>
            <value>
                <fullName>超限额</fullName>
                <label>Over limit</label>
            </value>
            <value>
                <fullName>逾期</fullName>
                <label>Overdue</label>
            </value>
            <value>
                <fullName>进口许可</fullName>
                <label>Import license</label>
            </value>
            <value>
                <fullName>唛头未确认</fullName>
                <label>Mark not confirmed</label>
            </value>
            <value>
                <fullName>其他</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>等拼柜订单</fullName>
                <label>Waiting for LCL order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>