force-app/main/default/objects/Contracts__c/fields/Sales_Company__c.field-meta.xml
<CustomField>
    <fullName>Sales_Company__c</fullName>
    <label>Sales Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>