force-app/main/default/objects/Contracts__c/fields/Sales_District__c.field-meta.xml
<CustomField>
    <fullName>Sales_District__c</fullName>
    <defaultValue>$User.Sales_District_Text__c</defaultValue>
    <label>Sales District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_District</valueSetName>
    </valueSet>
</CustomField>