force-app/main/default/objects/Contracts__c/fields/Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group__c</fullName>
    <defaultValue>$User.Sales_Group_Text__c</defaultValue>
    <label>Sales Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Org__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sales_Group</valueSetName>
    </valueSet>
</CustomField>