force-app/main/default/objects/Contracts__c/fields/Sea_Freight_Clause__c.field-meta.xml
<CustomField>
    <fullName>Sea_Freight_Clause__c</fullName>
    <label>Sea Freight Clause</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>