force-app/main/default/objects/Contracts__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>Shipment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>