force-app/main/default/objects/Contracts__c/fields/Show_Notification__c.field-meta.xml
<CustomField>
    <fullName>Show_Notification__c</fullName>
    <formula>IF (
				ISBLANK(TEXT(Contract_Type__c))  || ISBLANK(TEXT(Trade_Terms__c)) 
				|| ISBLANK(Loading_Port_New__c) || ISBLANK(Destination_Port_New__c),
				true,
				false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Notification</label>
    <type>Checkbox</type>
</CustomField>