force-app/main/default/objects/Contracts__c/fields/Subsidiary_Period__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Period__c</fullName>
    <label>Subsidiary Payment Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>