force-app/main/default/objects/Contracts__c/fields/Supplier_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Delivery__c</fullName>
    <label>Supplier Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
                <label>Y</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>N</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>