force-app/main/default/objects/Contracts__c/fields/Third_Party_Payment_Clause__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Payment_Clause__c</fullName>
    <label>Third Party Payment Clause</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>