force-app/main/default/objects/Contracts__c/fields/Trade_Terms__c.field-meta.xml
<CustomField>
    <fullName>Trade_Terms__c</fullName>
    <label>Incoterms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delivery_Plant__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Incoterms</valueSetName>
    </valueSet>
</CustomField>