force-app/main/default/objects/Contracts__c/fields/Transaction_Mode__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Mode__c</fullName>
    <label>Transaction Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Final Customer</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>