force-app/main/default/objects/Contracts__c/fields/Transfer_Contract_Time__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Contract_Time__c</fullName>
    <label>Transfer Contract Time</label>
    <type>Date</type>
</CustomField>