force-app/main/default/objects/Contracts__c/validationRules/Both_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Both_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
ISBLANK(Inco_Location1__c) ,
NOT(ISBLANK(TEXT(Incoterms__c )))
),
AND(
NOT(ISBLANK(Inco_Location1__c)),
ISBLANK(TEXT(Incoterms__c ))
)
)</errorConditionFormula>
    <errorMessage>Both Incoterms and Inco Location1 are required</errorMessage>
</ValidationRule>