force-app/main/default/objects/Contracts__c/validationRules/Can_not_pick_this_org.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_pick_this_org</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.Username!=&apos;interfaceuser@rb.pro.rbdev&apos; ,OR(BEGINS(TEXT(Sales_Org__c) , &apos;1&apos;) ,BEGINS( TEXT(Sales_Org__c) , &apos;2&apos;)))</errorConditionFormula>
    <errorDisplayField>Sales_Org__c</errorDisplayField>
    <errorMessage>Can not select this sales org</errorMessage>
</ValidationRule>