force-app/main/default/objects/Contracts__c/validationRules/Final_Customer_Payment_Not_Allow_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Final_Customer_Payment_Not_Allow_Change</fullName>
    <active>false</active>
    <errorConditionFormula>OR(AND(!ISBLANK(Quote__c),ISCHANGED(Final_Customer_Payment_Terms__c)),AND(Contract_Item__c&gt;0,ISBLANK(Quote__c),OR(TEXT(Status__c)==&apos;Draft&apos;,TEXT(Status__c)==&apos;Rejected&apos;,ISCHANGED(Final_Customer_Payment_Terms__c))))</errorConditionFormula>
    <errorMessage>You cannot update the final customer payment term since you have already added contract details</errorMessage>
</ValidationRule>